WEBHOOKS-30: More integration tests