@@ -1,18 +1,15 @@
 package com.atlassian.webhooks.plugin.junit;
 
-import com.atlassian.httpclient.api.Request;
-import com.atlassian.httpclient.api.Response;
 import com.atlassian.webhooks.plugin.AnnotatedEvent;
 import com.atlassian.webhooks.plugin.test.*;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.methods.HttpPost;
 import org.apache.http.entity.StringEntity;
 import org.apache.http.impl.client.DefaultHttpClient;
-import org.apache.xml.security.utils.Base64;
 import org.junit.Test;
 
+import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 
 import static org.junit.Assert.*;
 
@@ -73,7 +70,7 @@ public final class TestWebHookOnEvents
     public void testPersistentWebHook() throws InterruptedException, IOException
     {
         assertFalse(WebHookServlet.hasHooks());
-        registerWebHook("http://localhost:5990/refapp/plugins/servlet/webhook/persistent_event", "persitent_webhook_listener", "true:some_event_value");
+        registerWebHook("/plugins/servlet/webhook/persistent_event", "persitent_webhook_listener", "true:some_event_value");
 
         ServiceAccessor.eventPublisher.publish(new EventWithPersistentListener("true", "some_event_value"));
         final WebHookServlet.Hook hook = WebHookServlet.waitAndPopPersistentEventWebHooks();
@@ -83,10 +80,10 @@ public final class TestWebHookOnEvents
 
     private void registerWebHook(String url, String name, String parameters) throws IOException
     {
-        HttpPost request = new HttpPost();
+        HttpPost request = new HttpPost("http://localhost:5990/refapp/rest/webhooks/1.0/webhook/");
         request.setEntity(new StringEntity("{ \"name\": \"" + name + "\", \"url\": \"" + url + "\", \"events\": \"jira:issue_updated\", \"parameters\": \"" + parameters + "\"}"));
         request.setHeader("Content-type", "application/json");
-        request.setHeader("Authorization", "Basic " + Base64.encode("admin:admin".getBytes()));
+        request.setHeader("Authorization", "Basic " + DatatypeConverter.printBase64Binary("admin:admin".getBytes()));
         HttpResponse response = new DefaultHttpClient().execute(request);
         assertEquals(201, response.getStatusLine().getStatusCode());
     }
